php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #23936 fail to "select and fetch"
Submitted: 2003-06-01 09:26 UTC Modified: 2003-08-12 20:30 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:0 (0.0%)
Same OS:0 (0.0%)
From: sarusij at yahoo dot com Assigned: abies (profile)
Status: Closed Package: InterBase related
PHP Version: 4.3.2 OS: redhat 7.3
Private report: No CVE-ID: None
 [2003-06-01 09:26 UTC] sarusij at yahoo dot com
I was using RedHat 7.3 with Interbase 6.0.1 every thing worked fine (Apache 1.3.x php 4.1.x).
In order to get better performance updated to redhat 8 (apache 2.0.40 php 4.2.2) and interbase 7 (trial)
generated interbase.so using ./compile --with-interbase=shared,/opt/interbase
all in place, restart httpd, when accesing page with a database select it returns:-
Warning: InterBase: Dynamic SQL Error SQL error code = -804 Incorrect values within SQLDA structure in /home/web-site/htdocs/main.inc on line 31

line 31 =  $arr=ibase_fetch_row($sth);

By mistake I have, in one of the time forgot to change to interbase.so that was compiled with interbase 7 and left interbase.so related to interbase 6, the warning above did not appear and seemed like everything operates ok.

Using the tests within ext/interbase I found that test 5 (transactions) failed, it alsio failed when I have interbase 6.0.1. It did not fail using the original installation (RH7.3, IB6.0.1, php4.1.x apache 1.3.x)

I have been doing it all also with php 4.3.1 with same results.

What should I do in order to get the basic RH8 (apache 2.0.40 and php 4.2.2) instalation to operate correctly with interbase 7 (module interbase.so)
Thanks for help
Jacob




Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-06-12 10:10 UTC] sarusij at yahoo dot com
Ok, I have reinstalled RH73 Interbase 6.0.1 changed php to 4.3.2 worked ok.
removed Interbase 6, installed interbase 7 using interbase.so (generated with the previous interbase 6.0.1) seem worked ok (didn't full test my application).

now generated interbase.so with interbase 7 (./compile --with-interbase=shared,/opt/interbase > make) put it in place, started httpd and interbase and wht we get ? the exact same error !Warning: InterBase: Dynamic SQL Error SQL error code = -804 Incorrect values within SQLDA structure in /home/web-site/htdocs/main.inc on line 31

the question changed now, what shoud I do in order to get PHP and interbase 7 work together ? I asume the problem is in generating the interbase.so.
Thanks
 [2003-07-09 22:03 UTC] sniper@php.net
And you're sure 7.1 is backwards compatible with 6.0.1 ?
(ie. the databases created with 6.0.1 might not work with 7.x)
 
 [2003-07-10 11:28 UTC] sarusij at yahoo dot com
1. Using externals tools I manage to connect and update whatever I want in the database, this mean that the database is operational, the problem is with the interbase.so generated while compiling php with interbase 7.
2. It failed also while testing using the tests in exp/interbase/tests
3. for the moment I am using php432 + interbase 7 using the interbase.so generated for interbase 6. Since I don't know what might be the catches using it this way, I must get it working together the right way before going to production (soon).
4. I would be glad to know someone is using httpd 2.0.46 + php 4.3.2 + interbase 7
Thanks again
 [2003-08-12 08:16 UTC] abies@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php5-latest.tar.gz
 
For Windows:
 
  http://snaps.php.net/win32/php5-win32-latest.zip


 [2003-08-12 20:30 UTC] abies@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 11:00:01 2026 UTC