Fixed bug #23936 (fail to select and fetch)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@137492 c90b9560-bf6c-de11-be94-00142212c4b1